syntax = "proto3";

package maestro.v1;

option go_package = "github.com/taldoflemis/box-box/maestro/v1";

service MaestroService {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}